Use variable default branch for GH Action

--- a/.github/workflows/NodeJS-Test.yml
+++ b/.github/workflows/NodeJS-Test.yml
@@ -2,9 +2,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - ${{ github.event.repository.default_branch }}
   pull_request:
-    branches: [ main ]
+    branches:
+      - ${{ github.event.repository.default_branch }}
 
 jobs:
   build:
