--- a/.github/workflows/NodeJS-Test.yml
+++ b/.github/workflows/NodeJS-Test.yml
@@ -3,10 +3,10 @@ name: Node.js CI
 on:
   push:
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - master
   pull_request:
     branches:
-      - ${{ github.event.repository.default_branch }}
+      - master
 
 jobs:
   build:
