--- a/.github/workflows/NodeJS-Test.yml
+++ b/.github/workflows/NodeJS-Test.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
@@ -23,4 +22,4 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm run dist
+      - run: npm run test-compile
