--- a/.github/workflows/Plugin-Test.yml
+++ b/.github/workflows/Plugin-Test.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: ["14", "16", "18"]
 
     steps:
       - name: Checkout Code
@@ -25,9 +25,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install packages
-        run: npm ci
+        run: npm install
 
       - name: Test compile
-        env:
-          NODE_OPTIONS: --openssl-legacy-provider
-        run: npm run test-compile
+        run: |
+          # Running test
+          if [[ "$(node --version)" == "v18"* ]]; then
+            export NODE_OPTIONS=--openssl-legacy-provider
+          fi
+          npm run test-compile
