--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -14,15 +14,26 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16.x
+        node-version: "16"
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
 
     - name: Build app
-      env:
-        NODE_OPTIONS: --openssl-legacy-provider
-      run: npm run build
+      run: npm run dist
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build
+        path: publish
+
+    - name: Archive Release
+      uses: thedoctor0/zip-release@0.7.1
+      with:
+        type: zip
+        filename: joplin-plugin-remote-note-pull.zip
+        path: publish
 
     - name: Create release
       uses: actions/create-release@v1
@@ -33,9 +44,4 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: true
         prerelease: false
-
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: build
-        path: publish
+        artifacts: joplin-plugin-remote-note-pull.zip
