--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joplin-plugin-remote-note-pull",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "dist": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
     "dist-legacy-ssl": "bash -c \"export NODE_OPTIONS=--openssl-legacy-provider && webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive\"",
@@ -18,17 +18,19 @@
     "publish"
   ],
   "devDependencies": {
-    "@types/node": "^17.0.45",
+    "@types/node": "^18.x",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.1.0",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^11.1.1",
     "glob": "^7.1.6",
     "on-build-webpack": "^0.1.0",
     "tar": "^6.0.5",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.3",
+    "typescript": "^5.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "yargs": "^16.2.0"
+  },
+  "dependencies": {
   }
 }
