--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "joplin-plugin-remote-note-pull",
-  "version": "1.0.1",
+  "version": "v1.0.2",
+  "license": "MIT",
+  "description": "Creates a note from any website (markdown preferred) and periodicity updates the local note with the original website.",
+  "keywords": ["joplin-plugin"],
+  "files": ["publish"],
+  "author": {
+    "name" : "Henrik Gerdes",
+    "email" : "b@rubble.com",
+    "url" : "https://henrikgerdes.me/"
+  },
+  "repository": "github:hegerdes/joplin-plugin-remote-note-pull",
+  "engines": {"node": ">=14"},
+
   "scripts": {
     "dist": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
     "dist-legacy-ssl": "bash -c \"export NODE_OPTIONS=--openssl-legacy-provider && webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive\"",
@@ -10,13 +22,6 @@
     "dev": "npm run dist && bash -c \"/c/Program\\ Files/Joplin/Joplin.exe --env dev\"",
     "dev-legacy-ssl": "npm run dist-legacy-ssl && bash -c \"/c/Program\\ Files/Joplin/Joplin.exe --env dev\""
   },
-  "license": "MIT",
-  "keywords": [
-    "joplin-plugin"
-  ],
-  "files": [
-    "publish"
-  ],
   "devDependencies": {
     "@types/node": "^18.x",
     "copy-webpack-plugin": "^6.1.0",
@@ -28,7 +33,7 @@
     "typescript": "^5.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "yargs": "^17.7.1"
+    "yargs": "^17.7.x"
   },
   "dependencies": {
   }
