--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: "{{ env.NODE_VERSION }}"
+        node-version: "${{ env.NODE_VERSION }}"
 
     - name: Set Version
       run: |
