--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -30,7 +31,12 @@ jobs:
       run: npm install
 
     - name: Build app
-      run: npm run dist
+      run: |
+        # Running test
+        if [[ "$(node --version)" == "v18"* ]]; then
+          export NODE_OPTIONS=--openssl-legacy-provider
+        fi
+        npm run dist
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
