--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: "${{ env.NODE_VERSION }}"
+        registry-url: 'https://registry.npmjs.org'
 
     - name: Set Version
       run: |
