--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dist": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
     "dist-legacy-ssl": "bash -c \"export NODE_OPTIONS=--openssl-legacy-provider && webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive\"",
     "test-compile": "npm run build",
+    "lint": "eslint --ext .ts src ",
     "update": "npm install -g generator-joplin && yo joplin --update",
     "build": "webpack --joplin-plugin-config buildMain && webpack --joplin-plugin-config buildExtraScripts && webpack --joplin-plugin-config createArchive",
     "dev": "npm run dist && bash -c \"/c/Program\\ Files/Joplin/Joplin.exe --env dev\"",
@@ -28,7 +29,10 @@
   },
   "devDependencies": {
     "@types/node": "^18.x",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "copy-webpack-plugin": "^6.1.0",
+    "eslint": "^8.43.0",
     "fs-extra": "^11.1.1",
     "glob": "^7.1.6",
     "on-build-webpack": "^0.1.0",
@@ -38,6 +42,5 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "yargs": "^17.7.x"
-  },
-  "dependencies": {}
+  }
 }
