--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Run lint
+      run: npm run lint
+
     - name: Build app
       run: |
         # Running test
