ci: fix token permissions

--- a/.github/workflows/test-compile.yml
+++ b/.github/workflows/test-compile.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
 
+permissions:
+  security-events: write
+  actions: read
+  contents: read
+
 jobs:
   test-build:
     runs-on: ubuntu-latest
