--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.x",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@typescript-eslint/eslint-plugin": "^6.17.x",
+    "@typescript-eslint/parser": "^6.17.x",
     "copy-webpack-plugin": "^6.1.0",
     "eslint": "^8.43.0",
     "fs-extra": "^11.1.1",
