--- a/.github/workflows/test-compile.yml
+++ b/.github/workflows/test-compile.yml
@@ -17,6 +17,7 @@ jobs:
   test-build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         node-version: ["16", "18", "20"]
 
