--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   },
   "devDependencies": {
     "@types/node": "^18.x",
-    "@typescript-eslint/eslint-plugin": "^6.17.x",
-    "@typescript-eslint/parser": "^6.17.x",
+    "@typescript-eslint/eslint-plugin": "^6.18.x",
+    "@typescript-eslint/parser": "^6.18.x",
     "copy-webpack-plugin": "^6.1.0",
     "eslint": "^8.43.0",
     "fs-extra": "^11.1.1",
+    "generate-changelog": "^1.8.0",
     "glob": "^7.1.6",
     "on-build-webpack": "^0.1.0",
     "tar": "^6.0.5",
