--- a/.github/workflows/test-compile.yml
+++ b/.github/workflows/test-compile.yml
@@ -1,4 +1,4 @@
-name: Plugin Test Build
+name: Code-Test
 
 on:
   push:
@@ -14,6 +14,13 @@ permissions:
   contents: read
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+    - uses: pre-commit/action@v3.0.0
+
   test-build:
     runs-on: ubuntu-latest
     strategy:
