--- a/.github/workflows/test-compile.yml
+++ b/.github/workflows/test-compile.yml
@@ -17,16 +17,16 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-    - uses: pre-commit/action@v3.0.0
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      - uses: pre-commit/action@v3.0.0
 
   test-build:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        node-version: ["16", "18", "20"]
+        node-version: ["18", "20"]
 
     steps:
       - name: Checkout Code
