--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,13 +35,7 @@ jobs:
         run: npm run lint
 
       - name: Build app
-        run: |
-          # Running test
-          if [[ "$(node --version)" == "v18"* || "$(node --version)" == "v20"* ]]; then
-            export NODE_OPTIONS=--openssl-legacy-provider
-            echo HI
-          fi
-          npm run dist
+        run: npm run dist
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
@@ -66,6 +60,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push npm package
+        if: ${{ !contains( github.ref_name, 'dev' )}}
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
