fix: use new repo name for reusable gh actions
Signed-off-by: Henrik Gerdes <hegerdes@outlook.de>

--- a/.github/workflows/gh-greetings.yml
+++ b/.github/workflows/gh-greetings.yml
@@ -12,4 +12,4 @@ permissions:
 
 jobs:
   greeting:
-    uses: hegerdes/publish/.github/workflows/reusable-gh-greetings.yml@main
+    uses: hegerdes/helper-suite/.github/workflows/reusable-gh-greetings.yml@main
