--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joplin-plugin-remote-note-pull",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "license": "MIT",
   "description": "Creates a note from any website (markdown preferred) and periodicity updates the local note with the original website.",
   "keywords": [
@@ -29,21 +29,21 @@
     "updateVersion": "webpack --env joplin-plugin-config=updateVersion"
   },
   "devDependencies": {
+    "@joplin/lib": "~3.0",
     "@types/node": "^18.x",
-    "@typescript-eslint/eslint-plugin": "^6.18.x",
-    "@typescript-eslint/parser": "^6.18.x",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "copy-webpack-plugin": "^12.0.0",
-    "eslint": "^8.43.0",
-    "fs-extra": "^10.1.0",
+    "eslint": "^8.56.0",
+    "fs-extra": "^11.2.0",
     "generate-changelog": "^1.8.0",
-    "glob": "^8.0.3",
+    "glob": "^11.0.0",
     "on-build-webpack": "^0.1.0",
-    "tar": "^6.1.11",
+    "tar": "^7.4.3",
     "ts-loader": "^9.3.1",
-    "typescript": "^5.0.4",
-    "webpack": "^5.74.0",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
     "webpack-cli": "^4.10.0",
-    "yargs": "^17.7.x",
-    "@joplin/lib": "~2.14"
+    "yargs": "^17.7.x"
   }
 }
