--- a/src/manifest.json
+++ b/src/manifest.json
@@ -41,6 +41,7 @@
   ],
   "categories": [
     "personal knowledge management",
-    "productivity"
+    "productivity",
+    "developer tools"
   ]
 }
