--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "name": "hegerdes",
     "url": "https://henrikgerdes.me/"
   },
-  "repository": "github:hegerdes/joplin-plugin-remote-note-pull",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hegerdes/joplin-plugin-remote-note-pull.git"
+  },
   "engines": {
     "node": ">=14"
   },
@@ -37,11 +40,11 @@
     "eslint": "^8.56.0",
     "fs-extra": "^11.2.0",
     "generate-changelog": "^1.8.0",
-    "glob": "^11.0.0",
+    "glob": "^11.0.1",
     "on-build-webpack": "^0.1.0",
     "tar": "^7.4.3",
     "ts-loader": "^9.3.1",
-    "typescript": "^5.6.3",
+    "typescript": "^5.8.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^4.10.0",
     "yargs": "^17.7.x"
