--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joplin-plugin-remote-note-pull",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "license": "MIT",
   "description": "Creates a note from any website (markdown preferred) and periodicity updates the local note with the original website.",
   "keywords": [
@@ -32,21 +32,21 @@
     "updateVersion": "webpack --env joplin-plugin-config=updateVersion"
   },
   "devDependencies": {
-    "@joplin/lib": "~3.2",
-    "@types/node": "^18.x",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "copy-webpack-plugin": "^12.0.0",
-    "eslint": "^8.56.0",
-    "fs-extra": "^11.2.0",
+    "@joplin/lib": "~3.5",
+    "@types/node": "^22.x",
+    "@typescript-eslint/eslint-plugin": "^8.x",
+    "@typescript-eslint/parser": "^8.x",
+    "copy-webpack-plugin": "^13.0.1",
+    "eslint": "^9.39.2",
+    "fs-extra": "^11.3.3",
     "generate-changelog": "^1.8.0",
-    "glob": "^11.0.1",
+    "glob": "^13.x",
     "on-build-webpack": "^0.1.0",
     "tar": "^7.4.3",
     "ts-loader": "^9.3.1",
     "typescript": "^5.8.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^4.10.0",
-    "yargs": "^17.7.x"
+    "yargs": "^18.x"
   }
 }
